# Placebo-cpp

./: .gitignore  LICENSE
benchmark/: CMakeLists.txt  int_random.hpp
benchmark/placebo/details/: arithmetic_[fill_from_builtin]_bench.cpp  arithmetic_[fill_from_unsigned_builtin]_bench.cpp  builtin_[multiplication_of_unsigned_builtin]_bench.cpp
include/placebo/: wint  wint.hpp
include/placebo/details/: arithmetic.hpp  builtin.hpp  traits.hpp
include/placebo/evil/: macro.hpp
test/: CMakeLists.txt
test/nothing/: empty.cpp
test/placebo/details/: arithmetic_[fill_from_builtin]_test.cpp  arithmetic_[fill_from_unsigned_builtin]_test.cpp  builtin_[multiplication_of_unsigned_builtin]_test.cpp
